--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <!-- Embedding Bootstrap icons. -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+    <title>React Bootstrap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
